# rust-web

./: .babelrc  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  Rocket.toml  articles.rs  auth.rs  comments.rs  docker-compose.yml  license  package.json  readme.md  schema.sql  todo.md
docker/: Dockerfile  docker-compose.yml
src/: auth.rs  config.rs  db.rs  errors.rs  logger.rs  main.rs  schema.rs
src/commands/: user.rs
src/db/: articles.rs  comments.rs  mod.rs  users.rs
src/graphql/: context.rs  mod.rs  mutation.rs  query.rs  user.rs
src/models/: article.rs  comment.rs  event.rs  user.rs
src/routes/: articles.rs  context.rs  mod.rs  mutation.rs  query.rs  user.rs  users.rs
src/services/: sms.rs
src/utils/: auth.rs  context.rs  graphql.rs  mod.rs  validator.rs
ui/: .babelrc  App.js  app.json  index.html  index.js  index.web.js  package.json
ui/android/: gradle.properties  settings.gradle
ui/android/app/: build.gradle  ncm.keystore
ui/android/app/src/main/java/com/ui/: MainApplication.java
ui/app/: app.web.js  client.js  config.js  strings.js  theme.js
ui/app/components/: DropBox.js  Footer.web.js
ui/app/screens/: AppFrame.js  ForgotPasswordScreen.js  LoginScreen.js  NotificationScreen.js  SignUpScreen.js  index.js  index.web.js
ui/assets/: ncmBg.xcf  ncmLogo.xcf  query.gql
ui/ios/ui/: Info.plist
ui/ios/ui.xcodeproj/: project.pbxproj
ui/oldapp/: app.js  app.web.js  client.js  index.js  mutations.js
ui/oldapp/components/: BackgroundImage.js  Button.js  FloatingInput.js  Input.js  Link.web.js  Text.js
ui/oldapp/hocs/: apollo.js
ui/oldapp/screens/: FeedScreen.js  ForgotPasswordScreen.js  LoginScreen.js  ProfileScreen.js  SignUpScreen.js
ui/oldapp/utils/: alert.js
ui/src/: App.js  client.js  colors.js  config.js  constants.js  index.web.js  strings.js  theme.js
ui/src/components/: Alert.js  Box.js  Button.js  DateInput.js  DateText.js  ErrorBox.js  GenderInput.js  Header.js  Icon.js  Input.js  Loader.js  Mutation.js  OtpInput.js  PhoneInput.js  Query.js  Text.js  index.js
ui/src/hocs/: apollo.js
ui/src/queries/: user.js
ui/src/screens/: ExploreScreen.js  FeedScreen.js  LoginScreen.js  NotificationScreen.js  ProfileScreen.js  SplashScreen.js  VerifyScreen.js  WelcomeScreen.js
ui/src/utils/: error.js  log.js  storage.js  string.js  window.js
