[package]
authors = ["pyros2097"]
name = "rust-web"
version = "0.0.0"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
colored = "1.6"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
serde = "1.0.26"
serde_derive = "1.0.26"
serde_json = "1.0.8"
rust-crypto = "0.2.36"
frank_jwt = "3.0.0"
chrono = {version = "0.4.0", features = ["serde"]}
diesel = {version = "1.1.1", features = ["postgres", "chrono", "r2d2"]}
validator = "0.6.3"
validator_derive = "0.6.1"
slug = "0.1.2"
rand = "0.4.2"
quick-error = "1.2.1"
failure = "0.1.1"
failure_derive = "0.1.1"
juniper = "0.9.2"
juniper_codegen = "0.9.2"
juniper_rocket = "0.1.2"
rusoto_core = "0.32.0"
rusoto_sns = "0.32.0"
rusoto_ses = "0.32.0"
rusoto_s3 = "0.32.0"
rust-embed="0.5.2"

[dev-dependencies]
reqwest = "0.8.2"
lazy_static = "1.0.0"
hyper = "0.11.21"
