[package]
authors = ["pyros2097"]
name = "ncm"
version = "0.0.0"

[[bin]]
name = "ncm"
path = "src/main.rs"

[dependencies]
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
colored = "1.6"
rocket = { version = "0.3.6" }
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
rocket_cors = "0.2.1"
serde = "1.0.26"
serde_derive = "1.0.26"
serde_json = "1.0.8"
rust-crypto = "0.2.36"
frank_jwt = "3.0.0"
chrono = {version = "0.4.0", features = ["serde"]}
diesel = {version = "1.1.1", features = ["postgres", "chrono", "r2d2"]}
validator = "0.6.3"
validator_derive = "0.6.1"
quick-error = "1.2.1"
juniper = "0.9.2"
juniper_codegen = "0.9.2"
juniper_rocket = "0.1.2"
rust-embed="1.1.1"
reqwest = "0.8.5"
openssl-sys = "0.9.27"

[patch.crates-io]
pq-sys = { git = 'https://github.com/golddranks/pq-sys' }
